# vagquery

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
test/: test.py
tests/: test_departure.py  test_departure_errors.py  test_query.py  test_vaguery.py
vagquery/: __init__.py  departure.py  station.py
